--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,94 +1,170 @@
 <footer class="footer">
-    <div class="container mx-auto p2">
-        <div class="footer__inner flex-col justify-center align-center text-center mx-auto p-2">
-            <a href="#" class="footer__logo-link bg-red-200 text-center">
-                <img class="footer__logo-img h-10 mx-auto" src="../../../assets/images/footer-logo.svg" alt="logo" >
-            </a>
-            <div class="social__inner flex justify-center">
-                <a class="social__link m-2 p-2 w-10 bg-sky-300 hover:bg-transparent transition-all duration-300 rounded-lg" href="https://www.facebook.com/monosushi.com.ua">
-                    <img class="social__img mx-auto" src="../../../assets/images/facebook-icon.svg" alt="facebook">
-                </a>
-                <a class="social__link m-2 p-2 w-10 bg-sky-300 hover:bg-transparent transition-all duration-300 rounded-lg" href="https://www.instagram.com/monosushi.com.ua/" >
-                    <img class="social__img mx-auto" src="../../../assets/images/instagram-icon.svg" alt="instagram" >
-                </a>
-            </div>
-            <ul class="footer__menu flex justify-center my-2">
-                <li class="footer__menu-item mx-2 hover:text-sky-700 transition-all duration-300 px-2 rounded-lg">
-                    <a href="#" class="footer__menu-link m-1">Акції</a>
-                </li>
-                <li class="footer__menu-item mx-2 hover:text-sky-700 transition-all duration-300 px-2 rounded-lg">
-                    <a href="#" class="footer__menu-link m-1">Про нас</a>
-                </li>
-                <li class="footer__menu-item mx-2 hover:text-sky-700 transition-all duration-300 px-2 rounded-lg">
-                    <a href="#" class="footer__menu-link m-1">Оферта</a>
-                </li>
-            </ul>
-            <div class="footer__info flex-col">
-                <ul class="footer__info-list">
-                    <li class="footer__info-item mb-1">
-                        <h4 class="footer__info-title font-bold">Точки самовивозу</h4>
-                        <p class="footer__info-text">вул. Володимира Великого, 10в</p>
-                        <p class="footer__info-text">вул. Чорновола, 95</p>
-                    </li>
-                    <li class="footer__info-item mb-1">
-                        <h4 class="footer__info-title font-bold">Оформити замовлення</h4>
-                        <a class="footer__info-tel" href="tel:+380978780837">(097) 878 08 37</a>
-                    </li>
-                    <li class="footer__info-item mb-1">
-                        <h4 class="footer__info-title font-bold">Графік роботи</h4>
-                        <p class="footer__info-text">працюємо з 11:00 до 22:30</p>                            
-                    </li>
-                </ul>
-                <ul class="payment__inner flex justify-center m-2">
-                    <li class="payment__item mx-1 border-solid border-2 border-gray-300 rounded p-1">
-                        <a class="payment__link inline-block" href="#" >
-                            <img class="payment__img" src="../../../assets/images/pay-card-img-1.svg" alt="mastercard">
-                        </a>
-                    </li>
-                    <li class="payment__item mx-1 border-solid border-2 border-gray-300 rounded p-1">
-                        <a class="payment__link inline-block" href="#" >
-                            <img class="payment__img" src="../../../assets/images/pay-card-img-2.svg" alt="visa">
-                        </a>
-                    </li>
-                    <li class="payment__item mx-1 border-solid border-2 border-gray-300 rounded p-1">
-                        <a class="payment__link inline-block" href="#" >
-                            <img class="payment__img" src="../../../assets/images/pay-card-img-3.svg" alt="liqpay">
-                        </a>
-                    </li>
-                </ul>
-                <div class="copyright__inner flex justify-between text-xs mb-2">
-                    <p class="copyright">© 2023 Monosushi</p>
-                    <p class="author">Створення сайтів: </p>
-                </div>
-            </div>
+  <div class="container mx-auto p2">
+    <div
+      class="footer__inner flex flex-col justify-center align-center text-center mx-auto p-2"
+    >
+      <div class="top__wrapper flex flex-col md:flex-row justify-center mx-4">
+        <a href="#" class="footer__logo-link text-center">
+          <img
+            class="footer__logo-img h-10 mx-auto"
+            src="../../../assets/images/footer-logo.svg"
+            alt="logo"
+          />
+        </a>
+        <div class="social__inner flex justify-center mx-8">
+          <a
+            class="social__link m-2 p-2 w-10 bg-sky-300 hover:bg-transparent transition-all duration-300 rounded-lg"
+            href="https://www.facebook.com/monosushi.com.ua"
+          >
+            <img
+              class="social__img mx-auto"
+              src="../../../assets/images/facebook-icon.svg"
+              alt="facebook"
+            />
+          </a>
+          <a
+            class="social__link m-2 p-2 w-10 bg-sky-300 hover:bg-transparent transition-all duration-300 rounded-lg"
+            href="https://www.instagram.com/monosushi.com.ua/"
+          >
+            <img
+              class="social__img mx-auto"
+              src="../../../assets/images/instagram-icon.svg"
+              alt="instagram"
+            />
+          </a>
         </div>
-
-        <!-- /Footer menu -->
-        <ul class="footer__menu xl:hidden flex justify-around border-t-2 border-gray-300 border-solid p-2">
-            <li class="footer__menu-item bg-transparent hover:bg-sky-300 transition-all duration-300 px-2 rounded-lg">
-                <a class="footer__menu-link text-center" href="#">
-                    <img class="footer__menu-img mx-auto" src="../../../assets/images/nav-img-gift.svg" alt="">
-                    <p class="footer__menu-text">Акції</p>
-                </a>
-            </li>
-            <li class="footer__menu-item bg-transparent hover:bg-sky-300 transition-all duration-300 px-2 rounded-lg">
-                <a class="footer__menu-link text-center" href="#">
-                    <img class="footer__menu-img mx-auto" src="../../../assets/images/nav-img-rolls.svg" alt="">
-                    <p class="footer__menu-text">Роли</p>
-                </a>
-            </li>
-            <li class="footer__menu-item bg-transparent hover:bg-sky-300 transition-all duration-300 px-2 rounded-lg">
-                <a class="footer__menu-link text-center" href="#">
-                    <img class="footer__menu-img mx-auto" src="../../../assets/images/nav-img-sets.svg" alt="">
-                    <p class="footer__menu-text">Сети</p>
-                </a>
-            </li>
-            <li class="footer__menu-item bg-transparent hover:bg-sky-300 transition-all duration-300 px-2 rounded-lg">
-                <a class="footer__menu-link text-center" href="#">
-                    <img class="footer__menu-img mx-auto" src="../../../assets/images/nav-img-drinks.svg" alt="">
-                    <p class="footer__menu-text">Напої</p>
-                </a>
-            </li>
+        <ul class="footer__menu flex justify-center my-2 mx-4">
+          <li
+            class="footer__menu-item mx-2 hover:text-sky-700 transition-all duration-300 px-2 rounded-lg"
+          >
+            <a href="#" class="footer__menu-link m-1">Акції</a>
+          </li>
+          <li
+            class="footer__menu-item mx-2 hover:text-sky-700 transition-all duration-300 px-2 rounded-lg"
+          >
+            <a href="#" class="footer__menu-link m-1">Про нас</a>
+          </li>
+          <li
+            class="footer__menu-item mx-2 hover:text-sky-700 transition-all duration-300 px-2 rounded-lg"
+          >
+            <a href="#" class="footer__menu-link m-1">Оферта</a>
+          </li>
         </ul>
+      </div>
+      <div class="middle__wrapper">
+        <div class="footer__info">
+          <ul class="footer__info-list flex flex-col md:flex-row justify-center md:justify-around">
+            <li class="footer__info-item mb-1 mx-2">
+              <h4 class="footer__info-title font-bold">Точки самовивозу</h4>
+              <p class="footer__info-text">вул. Володимира Великого, 10в</p>
+              <p class="footer__info-text">вул. Чорновола, 95</p>
+            </li>
+            <li class="footer__info-item mb-1 mx-2">
+              <h4 class="footer__info-title font-bold">Оформити замовлення</h4>
+              <a class="footer__info-tel" href="tel:+380978780837"
+                >(097) 878 08 37</a
+              >
+            </li>
+            <li class="footer__info-item mb-1 mx-2">
+              <h4 class="footer__info-title font-bold">Графік роботи</h4>
+              <p class="footer__info-text">працюємо з 11:00 до 22:30</p>
+            </li>
+          </ul>
+        </div>
+        <ul class="payment__inner flex justify-center m-2 md:-mb-4">
+          <li
+            class="payment__item mx-1 border-solid border-2 border-gray-300 rounded p-1"
+          >
+            <a class="payment__link inline-block" href="#">
+              <img
+                class="payment__img"
+                src="../../../assets/images/pay-card-img-1.svg"
+                alt="mastercard"
+              />
+            </a>
+          </li>
+          <li
+            class="payment__item mx-1 border-solid border-2 border-gray-300 rounded p-1"
+          >
+            <a class="payment__link inline-block" href="#">
+              <img
+                class="payment__img"
+                src="../../../assets/images/pay-card-img-2.svg"
+                alt="visa"
+              />
+            </a>
+          </li>
+          <li
+            class="payment__item mx-1 border-solid border-2 border-gray-300 rounded p-1"
+          >
+            <a class="payment__link inline-block" href="#">
+              <img
+                class="payment__img"
+                src="../../../assets/images/pay-card-img-3.svg"
+                alt="liqpay"
+              />
+            </a>
+          </li>
+        </ul>
+        <div class="copyright__inner flex justify-between text-xs mb-2">
+          <p class="copyright">© 2023 Monosushi</p>
+          <p class="author">Створення сайтів:</p>
+        </div>
+      </div>
     </div>
-</footer>    
+
+    <!-- /Footer menu -->
+    <ul
+      class="footer__menu xl:hidden flex justify-around border-t-2 border-gray-300 border-solid p-2"
+    >
+      <li
+        class="footer__menu-item bg-transparent hover:bg-sky-300 transition-all duration-300 px-2 rounded-lg"
+      >
+        <a class="footer__menu-link text-center" href="#">
+          <img
+            class="footer__menu-img mx-auto"
+            src="../../../assets/images/nav-img-gift.svg"
+            alt=""
+          />
+          <p class="footer__menu-text">Акції</p>
+        </a>
+      </li>
+      <li
+        class="footer__menu-item bg-transparent hover:bg-sky-300 transition-all duration-300 px-2 rounded-lg"
+      >
+        <a class="footer__menu-link text-center" href="#">
+          <img
+            class="footer__menu-img mx-auto"
+            src="../../../assets/images/nav-img-rolls.svg"
+            alt=""
+          />
+          <p class="footer__menu-text">Роли</p>
+        </a>
+      </li>
+      <li
+        class="footer__menu-item bg-transparent hover:bg-sky-300 transition-all duration-300 px-2 rounded-lg"
+      >
+        <a class="footer__menu-link text-center" href="#">
+          <img
+            class="footer__menu-img mx-auto"
+            src="../../../assets/images/nav-img-sets.svg"
+            alt=""
+          />
+          <p class="footer__menu-text">Сети</p>
+        </a>
+      </li>
+      <li
+        class="footer__menu-item bg-transparent hover:bg-sky-300 transition-all duration-300 px-2 rounded-lg"
+      >
+        <a class="footer__menu-link text-center" href="#">
+          <img
+            class="footer__menu-img mx-auto"
+            src="../../../assets/images/nav-img-drinks.svg"
+            alt=""
+          />
+          <p class="footer__menu-text">Напої</p>
+        </a>
+      </li>
+    </ul>
+  </div>
+</footer>
