--- a/src/app/pages/about/about.component.html
+++ b/src/app/pages/about/about.component.html
@@ -1,1 +1,125 @@
-<p>about works!</p>
+<section class="about max-w-4xl mx-auto p-2 mt-2">
+    <h2 class="font-bold text-6xl mb-6 border-t-4 border-solid border-sky-300 pt-2 text-center">Про нас</h2>
+    <h3 class="font-bold text-4xl mb-6 leading-normal">Monosushi – доставка неймовірно смачних суші у Львові.</h3>
+    <ul class="text-xl leading-normal mb-4">
+        <li>Головний пріоритет – висока якість їжі та сервісу. Ми – команда професіоналів, яка щодня працює для Вас</li>
+        <li>Якість та Швидкість! – це два основних пріоритети в роботі команди. В першу чергу звичайно ж Якість. </li>
+        <li>Суші готуються без затримок, одразу ж після Вашого замовлення. А завдяки сучасним технологіям та відповідальному навчанню працівників, свіжі страви можливо доставляти до 59 хв в 75% замовлень.</li>
+    </ul>
+    <ul class="text-xl leading-normal mb-8">
+        <li><span class="mr-1 border border-sky-300 border-2 border-solid w-3 h-3 rounded-full inline-block"></span> висока якість їжі та сервісу</li>
+        <li><span class="mr-1 border border-sky-300 border-2 border-solid w-3 h-3 rounded-full inline-block"></span> команда професіоналів</li>
+        <li><span class="mr-1 border border-sky-300 border-2 border-solid w-3 h-3 rounded-full inline-block"></span> сучасні технології приготування</li>
+    </ul>
+
+    <div class="about__info flex flex-wrap mb-8 md:flex-nowrap">
+        <div class="about__info-image py-2 w-full flex justify-center order-3 md:order-1 md:basis-1/2 mx-4">
+            <img class="about__info-img w-auto" alt="food" src="../../../assets/images/about_img1.jpg">
+        </div>
+        <div class="about__info-content py-2 order-2 md:basis-1/2">
+            <h2 class="font-bold text-4xl leading-normal mb-6">Привіт! Познайомимось?</h2>                
+            <p class="text-xl leading-normal">Monosushi – це доставка найсмачніших суші у Львові, яка була створена командою перфекціоністів. Двоє друзів, які обожнюють роли вирішили створити продукт, якого їм не вистачало на ринку Львова. Продукт, в якому ідеальним буде все: смак, упакування, сервіс і все це за лояльною ціною!</p>
+        </div>
+    </div>
+    <div class="about__info flex mb-8 flex-wrap md:flex-nowrap">            
+        <div class="about__info-content md:basis-1/2 py-2 pr-6">
+            <h2 class="font-bold text-4xl leading-normal mb-6">Наш пріоритет - ваша посмішка від задоволення</h2>                
+            <p class="text-xl leading-normal"><span class="font-bold">Monosushi</span> – це доставка одного (mono) продукту. Роли вже давно стали рядовою стравою, проте процес їх приготування всеодно залишається цілим мистецтвом. Суші потрібно готувати за чіткою технологією суворо дотримуючись традицій. І в цьому ми справжні експерти! Сумніваєтесь? Тоді замовляйте безкоштовну доставку Monosushi і насолоджуйтесь.</p>
+        </div>
+        <div class="about__info-image py-2 w-full flex justify-center md:basis-1/2 mx-4 ">
+            <img class="about__info-img w-auto" alt="food" src="../../../assets/images/about_img2.jpeg">
+        </div>
+    </div>
+
+    <div class="about__advantages mb-8">
+        <h2 class="font-bold text-4xl leading-normal mb-6 text-center">Наші переваги</h2>                
+        <ul class="avantages__list flex flex-wrap">
+            <li class="advantages__item h-62 flex flex-col items-center justify-center mx-2">
+                <div class="advantages__item-inner text-center">
+                    <div class="advantages__img-inner w-20 h-20 mb-2 bg-sky-300 mx-auto items-center flex">
+                        <img class="advantages__img mx-auto" src="../../../assets/images/advantages-img-2.svg" alt="">
+                    </div>
+                    <h3 class="advantages__title w-56 font-bold text-xl">Неймовірний смак</h3>
+                    <p class="advantages__text w-56">Ми створили сушики, які змусіть ваші рецептори вибухнути</p>
+                </div>
+            </li>
+            <li class="advantages__item h-62 flex flex-col items-center justify-center mx-2">
+                <div class="advantages__item-inner text-center">
+                    <div class="advantages__img-inner w-20 h-20 bg-sky-300 mb-2 mx-auto items-center flex">
+                        <img class="advantages__img mx-auto" src="../../../assets/images/advantages-img-1.svg" alt="">
+                    </div>
+                    <h3 class="advantages__title w-56 font-bold text-xl mb-2 mx-auto">Свіжі продукти</h3>
+                    <p class="advantages__text w-56 mb-2">Наші інгредієнти ще вчора плавали у морі, а сьогодні вже у ваштх сушиках</p>
+                </div>
+            </li>
+            <li class="advantages__item h-62 flex flex-col items-center justify-center mx-2">
+                <div class="advantages__item-inner text-center">
+                    <div class="advantages__img-inner w-20 h-20 bg-sky-300 mb-2 mx-auto items-center flex">
+                        <img class="advantages__img inline-block mx-auto" src="../../../assets/images/advantages-img-3.svg" alt="">
+                    </div>
+                    <h3 class="advantages__title w-60 font-bold text-xl mb-2 mx-auto">Великі порції</h3>
+                    <p class="advantages__text w-60 mb-2">Ми віднайшли ідеальні порції ролів та завжди дотримуємось грамажу вказаного на сайті</p>
+                </div>
+            </li>
+            <li class="advantages__item h-62 flex flex-col items-center justify-center mx-2">
+                <div class="advantages__item-inner text-center">
+                    <div class="advantages__img-inner w-20 h-20 bg-sky-300 mb-2 items-center flex">
+                        <img class="advantages__img inline-block mx-auto" src="../../../assets/images/advantages-img-4.svg" alt="">
+                    </div>
+                    <h3 class="advantages__title w-60 font-bold text-xl mb-2">Чистота на кухні</h3>
+                    <p class="advantages__text w-60 mb-2">Ми як ніхто інший розуміємо, що морепродукти потребують абсолютної чистоти на кухні</p>
+                </div>
+            </li>
+        </ul>
+    </div>
+
+    <div class="about_questions mb-8">
+        <h2 class="font-bold text-4xl leading-normal mb-6 text-center">Популярні запитання</h2>                
+        <ul class="questions__list">
+            <li class="question__item mb-6 border-b-2 border-solid border-gray-300">
+                <div class="question__item-header flex justify-between">
+                    <h4 class="question__title font-bold text-xl mb-4">Як можна замовити, якщо наша адреса не входить у вашу зону доставки?</h4>
+                    <div (click)="showDetails1()" *ngIf="!aboutQuestion1" class="question__item-arrow text-2xl cursor-pointer">&#8744;</div>
+                    <div (click)="hideDetails1()" *ngIf="aboutQuestion1" class="question__item-arrow text-2xl cursor-pointer">&#8743;</div>
+                </div>                    
+                <div *ngIf="aboutQuestion1" class="question__detailes text-lg leading-normal">
+                    <p class="mb-4">Якщо ваша адреса знаходиться поза межами нашої зони доставки, ви можете:</p>
+                    <p class="mb-4"><span class="mr-2 font-bold text-xl">01</span> Забрати замовлення самовивозом за однією з наших адрес. (В такому випадку ви отримаєте “Запечені моно макі з лососем у подарунок).</p>
+                    <p class="mb-4"><span class="mr-2 font-bold text-xl">02</span> Дізнатись в оператора чи є можливість зробити виключення для доставки поза межі зони в даний момент часу.</p>
+                </div>
+            </li>
+            <li class="question__item mb-6 border-b-2 border-solid border-gray-300">
+                <div class="question__item-header flex justify-between">
+                    <h4 class="question__title font-bold text-xl mb-4">Скільки часу очікувати на замовлення?</h4>
+                    <div (click)="showDetails2()" *ngIf="!aboutQuestion2" class="question__item-arrow text-2xl cursor-pointer">&#8744;</div>
+                    <div (click)="hideDetails2()" *ngIf="aboutQuestion2" class="question__item-arrow text-2xl cursor-pointer">&#8743;</div>
+                </div>                    
+                <div *ngIf="aboutQuestion2" class="question__detailes text-lg leading-normal">
+                    <p class="mb-2">Час доставки залежить від адреси замовлення.</p>                        
+                    <p class="mb-2">Доставка в зелену зону – до 1 год.</p>
+                    <p class="mb-4">Доставка в жовту зону – до 1,5 год.</p>
+                </div>
+            </li>
+            <li class="question__item mb-6 border-b-2 border-solid border-gray-300">
+                <div class="question__item-header flex justify-between">
+                    <h4 class="question__title font-bold text-xl mb-4">Доставка безкоштовна?</h4>
+                    <div (click)="showDetails3()" *ngIf="!aboutQuestion3"  class="question__item-arrow text-2xl cursor-pointer">&#8744;</div>
+                    <div (click)="hideDetails3()" *ngIf="aboutQuestion3" class="question__item-arrow text-2xl cursor-pointer">&#8743;</div>
+                </div>                    
+                <div *ngIf="aboutQuestion3" class="question__detailes text-lg leading-normal">
+                    <p class="mb-4">Так, доставка безкоштовна при мінімальній сумі замовлення 200 грн в зелену зону доставки та 300 грн в жовту зону.</p>                                                
+                </div>
+            </li>
+            <li class="question__item mb-6 border-b-2 border-solid border-gray-300">
+                <div class="question__item-header flex justify-between">
+                    <h4 class="question__title font-bold text-xl mb-4">До якої години ви приймаєте замовлення?</h4>
+                    <div (click)="showDetails4()" *ngIf="!aboutQuestion4" class="question__item-arrow text-2xl cursor-pointer">&#8744;</div>
+                    <div (click)="hideDetails4()" *ngIf="aboutQuestion4" class="question__item-arrow text-2xl cursor-pointer">&#8743;</div>
+                </div>                    
+                <div *ngIf="aboutQuestion4" class="question__detailes text-lg leading-normal">
+                    <p class="mb-4">Ми приймаємо замовлення кожного дня з 11:00 по 21:30 (у зв’язку з комендантською годиною)</p>
+                </div>
+            </li>
+        </ul>
+    </div>
+</section>
