add admin panek

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -106,16 +106,18 @@
                 </div>
             </div>
             <button class="login__btn mx-6">
-                <img src="../../../assets/images/user.svg" alt="user">
-                <div class="header__user-modal--back hidden absolute inset-0 bg-gray-100/80 cursor-auto">
+                <img (click)="showUserLogIn()" src="../../../assets/images/user.svg" alt="user">
+
+                <div *ngIf="isShowUserLogIn" class="header__user-modal--back absolute inset-0 bg-gray-100/80 cursor-auto">
                     <div class="header__user-modal absolute inset-0 h-screen flex justify-center items-center">
                         <div class="header__user-modal--inner flex-col bg-white rounded-lg p-4 text-lg w-96">
-                            <div class="header__user-modal--close text-end mb-4 cursor-pointer">X</div>
+                            <div (click)="hideUserLogIn()" class="header__user-modal--close text-end mb-4 cursor-pointer">X</div>
                             <h2 class="text-center font-bold text-xl mb-2 w-2/3 mx-auto">Вхід в кабінет</h2>                                                                
                             <form class="header__user-modal flex flex-col p-2 mb-2">
-                                <input class="user__email mb-2 p-2" type="text" placeholder="Ваш email">
-                                <input class="password__email mb-2 p-2" type="text" placeholder="Пароль">                                    
-                                <input class="login__btn bg-sky-300 hover:bg-transparent rounded-lg p-2 font-bold cursor-pointer"  type="submit" value="УВІЙТИ В КАБІНЕТ">                                    
+                                <input [(ngModel)]="userEmail" name="userEmail" class="user__email mb-2 p-2" type="text" placeholder="Ваш email">
+                                <input [(ngModel)]="userPassword" name="userPassword" class="password__email mb-2 p-2" type="text" placeholder="Пароль">
+                                <button (click)="signIn(userEmail, userPassword)" class="login__btn bg-sky-300 hover:bg-transparent rounded-lg p-2 font-bold cursor-pointer" type="button">УВІЙТИ В КАБІНЕТ</button>
+                                <!-- <input class="login__btn bg-sky-300 hover:bg-transparent rounded-lg p-2 font-bold cursor-pointer" type="submit" value="УВІЙТИ В КАБІНЕТ"> -->
                             </form>                                                                
                             <div class="footer__modal flex justify-between text-xs mb-2">
                                 <a href="#" class="reset__password hover:text-sky-700">Забули пароль?</a>
@@ -124,6 +126,7 @@
                         </div>                                
                     </div>                            
                 </div>
+
             </button>
             <div class="basket__inner flex p-2 cursor-pointer bg-sky-300 items-center p-2 min-w-fit">
                 <img class="basket__img h-2/3 mr-2" src="../../../assets/images/basket.svg" alt="basket">
