--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,6 +1,6 @@
-<section class="admin container">
+<section class="admin container ">
     
- <aside id="default-sidebar" class="fixed top-20 left-0 z-40 w-48 h-screen transition-transform -translate-x-full sm:translate-x-0 border-t-4 border-solid border-sky-300" aria-label="Sidebar">
+ <aside id="default-sidebar" class="fixed top-20 left-2 z-40 w-40 h-screen transition-transform -translate-x-full sm:translate-x-0 border-t-4 border-solid border-sky-300" aria-label="Sidebar">
     <div class="min-h-fit px-3 py-4 overflow-y-auto bg-gray-50 dark:bg-gray-800 text-center">
        <ul class="space-y-2">
           <li>
@@ -28,7 +28,7 @@
     </div>
  </aside>
  
- <div class="p-4 sm:ml-64 h-72 min-h-fit px-3 py-4 overflow-y-auto ">
+ <div class="p-4 sm:ml-48 py-4 ">
     <div class="p-4 border-2 border-gray-200 border-dashed rounded-lg ">
        Hello
        <router-outlet></router-outlet>
